- Adjusted CI/CD to set .env on backend remote server - Added backend routes implementation for list and get movies - Removed usage of Babel on backend cli commands
